<resources>
    <string name="app_name">Indian Basketball League</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="team_b">Team B</string>
    <string name="_0_">0</string>
    <string name="_2_points1">+2 points</string>
    <string name="free_throw1">free throw</string>
    <string name="_3_points1">+3 points</string>
    <string name="reset">reset</string>
    <string name="todo">TODO</string>
    <string name="indian_basketball_league">Indian Basketball League</string>
</resources>
