<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/basketball1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abhaya_libre"
                    android:gravity="center_horizontal"
                    android:text="@string/team_a"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abhaya_libre"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_48sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_72dp"
                    android:layout_margin="@dimen/_16dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/_3_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_72dp"
                    android:layout_margin="@dimen/_16dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/_2_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_72dp"
                    android:layout_margin="@dimen/_16dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/free_throw" />
            </LinearLayout>

            <View
                android:id="@+id/innerLine"
                android:layout_width="@dimen/_2dp"
                android:layout_height="@dimen/_400dp"
                android:background="#cfcfcf" />

            <LinearLayout
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/abhaya_libre"
                    android:gravity="center_horizontal"
                    android:text="@string/team_b"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abhaya_libre"
                    android:gravity="center_horizontal"
                    android:text="@string/_0_"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_48sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_72dp"
                    android:layout_margin="@dimen/_16dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/_3_points1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_72dp"
                    android:layout_margin="@dimen/_16dp"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/_2_points1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_72dp"
                    android:layout_margin="@dimen/_16dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/free_throw1" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_16dp"
            android:onClick="setReset"
            android:text="@string/reset" />
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>